Enable native-access also for regular builds